src/objects/LTA_Bill_Analysis__c.object
<CustomObject>
    <description>Utilized for providing multi-tier analysis for proposed legislative bills.</description>
    <fields>
        <fullName>Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Tier User assigned</inlineHelpText>
        <label>Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bill_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_Author__c</fullName>
        <formula>Link_to_Bill__r.Bill_Author__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Caption__c</fullName>
        <formula>Link_to_Bill__r.Bill_Caption__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Caption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Summary__c</fullName>
        <description>Please provide a brief overall summary of the bill and any differences from the previous version of the bill (if applicable).</description>
        <inlineHelpText>Please provide a brief overall summary of the bill and any differences from the previous version of the bill (if applicable).</inlineHelpText>
        <label>Bill Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bill_Version__c</fullName>
        <formula>CASE(Link_to_Bill__r.Bill_Version__c,
&quot;FIL&quot;, &quot;1 - Filed&quot;,
&quot;HCS&quot;, &quot;2 - House Committee Substitute&quot;,
&quot;ENG&quot;, &quot;3 - Engrossed&quot;,
&quot;SCS&quot;, &quot;4 - Senate Committee Substitute&quot;,
&quot;CCR&quot;, &quot;5 - Conference Committee Report&quot;,
&quot;ENR&quot;, &quot;6 - As Finally Passed (ENR)&quot;,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corollary_Division_s__c</fullName>
        <description>Populated by the LTA - Bill Analysis Automation process builder.</description>
        <label>Corollary Division(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delete_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this will indicate that this Bill Analysis should be deleted.</inlineHelpText>
        <label>Delete Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_SME_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Provides the list of Division SME Bill Analysis  (Tier C) records.</description>
        <inlineHelpText>Provides the list of Division SME Bill Analysis records.</inlineHelpText>
        <label>Division SME Analysis</label>
        <referenceTo>LTA_Bill_Analysis__c</referenceTo>
        <relationshipLabel>Division SME Analysis</relationshipLabel>
        <relationshipName>Bill_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Owner:User.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Indicates when the Bill Analysis is due for this Bill Version.</description>
        <inlineHelpText>Indicates when the Bill Analysis is due for this Bill Version.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Impact_Summary__c</fullName>
        <description>Please provide a brief summary of potential fiscal impact to TxDOT. (THIS IS NOT A REQUEST FOR AN OFFICIAL FISCAL NOTE; IF TXDOT RECEIVES A REQUEST FROM THE LBB, YOU WILL RECEIVE A SEPARATE REQUEST FOR A FISCAL NOTE (APART FROM THIS SUMMARY).</description>
        <inlineHelpText>Please provide a brief summary of potential fiscal impact to TxDOT. (THIS IS NOT A REQUEST FOR AN OFFICIAL FISCAL NOTE; IF TXDOT RECEIVES A REQUEST FROM THE LBB, YOU WILL RECEIVE A SEPARATE REQUEST FOR A FISCAL NOTE (APART FROM THIS SUMMARY).</inlineHelpText>
        <label>Fiscal Impact Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Fiscal_Impact__c</fullName>
        <label>Fiscal Impact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FlowUserLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Temporary field simply to lookup a user w/ in a flow to assign to Owner since Owner field is not allowed via the Lookup component.</description>
        <label>FlowUserLookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BillAnalyses_FLOW_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Bill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Bill</label>
        <referenceTo>LTA_Bill__c</referenceTo>
        <relationshipLabel>Bill Analyses</relationshipLabel>
        <relationshipName>Bill_Analyses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operational_Impact_Analysis__c</fullName>
        <description>Please provide a detailed analysis and objectively explain in detail the bill’s operational impact on TxDOT from the perspective of your division.  Please reference specific sections of the bill when explaining operational impacts.</description>
        <inlineHelpText>Please provide a detailed analysis and objectively explain in detail the bill’s operational impact on TxDOT from the perspective of your division.  Please reference specific sections of the bill when explaining operational impacts.</inlineHelpText>
        <label>Operational Impact &amp; Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Operational_Impact__c</fullName>
        <description>Indicates whether there is Operational Impact or not.</description>
        <label>Operational Impact?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <formula>IF (AND((TEXT(Review_Status__c)) &lt;&gt; &apos;Complete&apos;,(Due_Date__c &lt; TODAY())), &apos;PAST DUE&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Division__c</fullName>
        <formula>TEXT(Link_to_Bill__r.Primary_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirement__c</fullName>
        <description>Indicates whether there is a Reporting Requirement or not.</description>
        <label>Reporting Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <description>Indicates what stage the Bill Analysis is in.</description>
        <label>Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>IF(ISBLANK(Division_SME_Analysis__c), &quot;B&quot;, &quot;C&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Owner:User.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Bill Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Link_to_Bill__c</columns>
        <columns>NAME</columns>
        <columns>Bill_Author__c</columns>
        <columns>Bill_Version__c</columns>
        <columns>Owner__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Bill_Caption__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Me</fullName>
        <columns>Link_to_Bill__c</columns>
        <columns>NAME</columns>
        <columns>Bill_Author__c</columns>
        <columns>Bill_Version__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Bill_Caption__c</columns>
        <filterScope>Mine</filterScope>
        <label>Assigned to Me</label>
        <sharedTo>
            <roleAndSubordinates>Government_Affairs_Section</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Completed_Bill_Analysis</fullName>
        <columns>Link_to_Bill__c</columns>
        <columns>NAME</columns>
        <columns>Bill_Version__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Bill_Caption__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Assigned to Me: Completed</label>
        <sharedTo>
            <roleAndSubordinates>Government_Affairs_Section</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Progress</fullName>
        <columns>Link_to_Bill__c</columns>
        <columns>NAME</columns>
        <columns>Bill_Version__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Bill_Caption__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Assigned to Me: In Progress</label>
        <sharedTo>
            <role>Government_Affairs_Section</role>
            <roleAndSubordinates>Government_Affairs_Section</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>New</fullName>
        <columns>Link_to_Bill__c</columns>
        <columns>NAME</columns>
        <columns>Bill_Version__c</columns>
        <columns>Review_Status__c</columns>
        <columns>Bill_Caption__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Review_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Assigned to Me: New</label>
        <sharedTo>
            <roleAndSubordinates>Government_Affairs_Section</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>BA-{00000000}</displayFormat>
        <label>Bill Analysis Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Analyses</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Fill_in_fields_before_Completion</fullName>
        <active>true</active>
        <description>Before the user updates Review Status to Completed, fill out all necessary fields.</description>
        <errorConditionFormula>AND(
    ISPICKVAL(Review_Status__c, &quot;Complete&quot;),
    OR
			   (LEN(Bill_Summary__c)=0,
       ISBLANK(TEXT(Operational_Impact__c)),
       ISBLANK(TEXT(Fiscal_Impact__c))
			   )
				)</errorConditionFormula>
        <errorMessage>Please fill out all sections before marking this Bill Analysis as Complete.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fiscal_Impact_Required</fullName>
        <active>true</active>
        <description>This validation rule will ensure that if Fiscall Impact? = Yes, the Fiscal Impact field will be required.</description>
        <errorConditionFormula>AND( 
				   ISPICKVAL(Fiscal_Impact__c, &quot;Yes&quot;),
  		   LEN(Fiscal_Impact_Summary__c)=0
				)</errorConditionFormula>
        <errorMessage>Please define what the Fiscal Impact is before saving the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Operational_Impact_Required</fullName>
        <active>true</active>
        <description>This validation rule will ensure that if Operational Impact? = Yes, the Operational Impact field will be required.</description>
        <errorConditionFormula>AND( 
				ISPICKVAL(
								      Operational_Impact__c, &quot;Yes&quot;),
				LEN(Operational_Impact_Analysis__c)=0
				)</errorConditionFormula>
        <errorDisplayField>Operational_Impact_Analysis__c</errorDisplayField>
        <errorMessage>Please define what the Operational Impact is before saving the record.</errorMessage>
    </validationRules>
</CustomObject>